--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Your own mini circled social media platform.
+  " />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/minigramlogo.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
